# RayTracer

./: .gitignore  CHANGELOG  CHANGELOG.md  CMakeLists.txt  Camera.hpp  Color.hpp  HDRImage.hpp  HitRecord.hpp  Normal3.hpp  PFMreader.cpp  PFMreader.hpp  Parameters.hpp  Point3.hpp  README.md  Ray.hpp  Scenefile.hpp  Transformation.hpp  Vec2.hpp  Vec3.hpp  World.hpp  main.cpp  materials.hpp  renderers.hpp  scenefile.hpp  shapes.hpp  testHDRImage.cpp  test_color.cpp  utils.hpp
.github/workflows/: cmake-multi-platform.yml
examples/: PLdemo.txt  README.md  blurry.txt  box.txt  demo.txt
include/: Camera.hpp  Color.hpp  HDRImage.hpp  HitRecord.hpp  Normal3.hpp  PFMReader.hpp  PFMreader.hpp  Ray.hpp  Transformation.hpp  Vec2.hpp  Vec3.hpp  materials.hpp  renderers.hpp  scenefile.hpp  shapes.hpp  utils.hpp
src/: HDRImage.cpp  PFMReader.cpp  main.cpp  scenefile.cpp  utils.cpp
test/: testCamera.cpp  testColor.cpp  testGeometry.cpp  testHDRImage.cpp  testOnbCreation.cpp  testOrientation.cpp  testPCG.cpp  testPFMReader.cpp  testPFMreader.cpp  testPathTracer.cpp  testRay.cpp  testRenderers.cpp  testScenefile.cpp  testShapes.cpp  testTextures.cpp
